EFR + Oredict support (#11)
* Removing recipe property serialization

* Fix furnaces GT handler

* EFR compat

* Load/unload fix

* Oredict

* Spotless