@@ -10,11 +10,9 @@ import javax.annotation.Nullable;
 
 import net.minecraft.init.Blocks;
 import net.minecraft.item.ItemStack;
-import net.minecraft.nbt.JsonToNBT;
-import net.minecraft.nbt.NBTException;
-import net.minecraft.nbt.NBTTagCompound;
 import net.minecraftforge.fluids.FluidRegistry;
 import net.minecraftforge.fluids.FluidStack;
+import net.minecraftforge.oredict.OreDictionary;
 
 import com.sbancuz.plannh.data.PropertyProvider;
 import com.sbancuz.plannh.data.RecipeProperty;
@@ -22,30 +20,12 @@ import com.sbancuz.plannh.data.RecipeResource;
 
 public final class RecipePropertyAPI {
 
-    private static final Map<String, RecipeProperty<?>> properties = new HashMap<>();
     private static final Map<String, List<PropertyProvider>> extractors = new HashMap<>();
 
-    public static final RecipeProperty<Integer> DURATION_TICKS = RecipeProperty.intBuilder("duration_ticks", 0)
+    public static final RecipeProperty<Integer> DURATION_TICKS = RecipeProperty.<Integer>builder("duration_ticks", 0)
         .build();
 
     public static final RecipeResource<ItemStack> ITEM = RecipeResource.builder("item", new ItemStack(Blocks.dirt))
-        .serializer((obj, stack) -> {
-            if (stack == null) return;
-            NBTTagCompound nbt = new NBTTagCompound();
-            stack.writeToNBT(nbt);
-            obj.addProperty("itemStack", nbt.toString());
-        })
-        .deserializer(obj -> {
-            if (!obj.has("itemStack")) return null;
-            try {
-                NBTTagCompound nbt = (NBTTagCompound) JsonToNBT.func_150315_a(
-                    obj.get("itemStack")
-                        .getAsString());
-                return ItemStack.loadItemStackFromNBT(nbt);
-            } catch (final NBTException e) {
-                return null;
-            }
-        })
         .displayFormatter(ItemStack::getDisplayName)
         .amountFormatter((rate) -> {
             if (rate >= 1000000000f) return String.format("%.1fB", rate / 1000000000f);
@@ -56,7 +36,7 @@ public final class RecipePropertyAPI {
         })
         .amountExtractor(stack -> stack.stackSize)
         .amountUpdater((stack, newAmount) -> stack.stackSize = newAmount)
-        .connectionChecker(ItemStack::isItemEqual)
+        .connectionChecker(RecipePropertyAPI::itemsMatch)
         .hashCodeExtractor(
             s -> 31 * s.getItem()
                 .hashCode() + s.getItemDamage())
@@ -64,17 +44,6 @@ public final class RecipePropertyAPI {
 
     public static final RecipeResource<FluidStack> FLUID = RecipeResource
         .<FluidStack>builder("fluid", new FluidStack(FluidRegistry.WATER, 0, null))
-        .serializer((obj, stack) -> {
-            obj.addProperty("fluid", FluidRegistry.getFluidName(stack.getFluid()));
-            obj.addProperty("amount", stack.amount);
-        })
-        .deserializer(obj -> {
-            final String name = obj.get("fluid")
-                .getAsString();
-            final int amount = obj.get("amount")
-                .getAsInt();
-            return FluidRegistry.getFluidStack(name, amount);
-        })
         .displayFormatter(FluidStack::getLocalizedName)
         .amountFormatter(amount -> {
             final int mB = Math.round(amount);
@@ -88,8 +57,18 @@ public final class RecipePropertyAPI {
                 .hashCode())
         .build();
 
-    public static void registerProperty(final RecipeProperty<?> property) {
-        properties.put(property.getKey(), property);
+    private static boolean itemsMatch(final ItemStack a, final ItemStack b) {
+        if (a.getItem() == null || b.getItem() == null) return false;
+        if (a.isItemEqual(b)) return true;
+        final int[] idsA = OreDictionary.getOreIDs(a);
+        final int[] idsB = OreDictionary.getOreIDs(b);
+        if (idsA.length == 0 || idsB.length == 0) return false;
+        for (final int idA : idsA) {
+            for (final int idB : idsB) {
+                if (idA == idB) return true;
+            }
+        }
+        return false;
     }
 
     public static void registerExtractor(String overlayId, final PropertyProvider extractor) {
@@ -102,23 +81,15 @@ public final class RecipePropertyAPI {
         return extractors.getOrDefault(overlayId, List.of());
     }
 
-    public static @Nullable RecipeProperty<?> getProperty(String key) {
-        return properties.get(key);
-    }
-
     public static @Nullable PropertyProvider getExtractor(String overlayId) {
         final List<PropertyProvider> list = extractors.get(overlayId);
-        return list != null && !list.isEmpty() ? list.get(0) : null;
+        return list != null && !list.isEmpty() ? list.getFirst() : null;
     }
 
     public static void reset() {
-        properties.clear();
         for (var ex : extractors.values()) {
             ex.clear();
         }
         extractors.clear();
-        registerProperty(DURATION_TICKS);
-        registerProperty(ITEM);
-        registerProperty(FLUID);
     }
 }
